@@ -1,3 +1,8 @@
+2001-09-24  Bradford Hovinen  <hovinen@ximian.com>
+
+	* capplet-util.c (legacy_is_modified): Improved error checking and
+	cleaned up the logic a bit
+
 2001-09-14  Bradford Hovinen  <hovinen@ximian.com>
 
 	* capplet-util.c (set_moniker_cb): Don't call setup_cb after the
